--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,50 @@
 .App {
   text-align: center;
 }
-
+.container{
+  max-width: 1200px;
+  display: flex;
+ justify-content: center;
+}
+.AddTaskForm {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+input {
+  width: 20%;
+  padding: 12px 20px;
+  border: 1px solid #052965;
+  border-radius: 6px;
+}
+p {
+  color: #03063f;
+  font-size: 18px;
+}
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  border: 1px solid black;
+  box-shadow: 5px 7px 5px -4px rgba(170, 183, 193, 0.6);
+  border-radius: 6px;
+  padding: 6px;
+  margin-bottom: 10px;
+}
+.btn{
+  border: none;
+  width: 100px;
+  height: 40px;
+  border-radius: 6px;
+  margin-left: 10px;
+  background: rgba(6, 74, 245, 0.18);
+}
+button{
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: rgba(6, 38, 245, 0.18);
+  border: none;
+  border-radius: 4px;
+  /*margin-left: 45px;*/
+}
